--- a/_data/socials.yml
+++ b/_data/socials.yml
@@ -18,7 +18,7 @@ scholar_userid: yIX3RKsAAAAJ # your Google Scholar ID
 #publons_id: # your ID on Publons
 #lattes_id: # your ID on Lattes (Brazilian Lattes CV)
 #osf_id: # your OSF ID
-research_gate_profile: https://www.researchgate.net/profile/Arash-Jalil-Khabbazi?ev=hdr_xprf # your profile on ResearchGate
+research_gate_profile: Arash-Jalil-Khabbazi # your profile on ResearchGate
 #scopus_id: # your profile on Scopus
 #blogger_url: # your blogger URL
 work_url: https://engineering.purdue.edu/Herrick/about/people/ptProfile?resource_id=290102&group_id=31480 # work page URL
