--- a/_data/socials.yml
+++ b/_data/socials.yml
@@ -3,7 +3,7 @@
 # -----------------------------------------------------------------------------
 
 email: arashjkh@purdue.edu
-github_username: arashjkh # your GitHub user name
+github_username: ajkhabbazi # your GitHub user name
 #gitlab_username: # your GitLab user name
 #twitter_username: # your Twitter handle
 #mastodon_username: # your mastodon instance+username in the format instance.tld/@username
